--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.71.3",
+    "mammoth": "^1.9.0",
     "next": "15.2.4",
+    "openai": "^4.91.1",
+    "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8"
