--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.5.0",
     "@tanstack/react-query": "^5.71.3",
     "mammoth": "^1.9.0",
     "next": "15.2.4",
     "openai": "^4.91.1",
     "pdf-parse": "^1.1.1",
+    "prisma": "^6.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8"
