--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^6.5.0",
+    "@auth/prisma-adapter": "^2.9.0",
+    "@prisma/client": "^6.7.0",
     "@tanstack/react-query": "^5.71.3",
     "clsx": "^2.1.1",
     "mammoth": "^1.9.0",
     "next": "15.2.4",
+    "next-auth": "^4.24.11",
     "openai": "^4.91.1",
     "pdf-parse": "^1.1.1",
-    "prisma": "^6.5.0",
+    "prisma": "^6.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-dropzone": "^14.3.8"
+    "react-dropzone": "^14.3.8",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
