--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^6.7.0",
     "@tanstack/react-query": "^5.71.3",
     "clsx": "^2.1.1",
+    "jotai": "^2.12.3",
     "mammoth": "^1.9.0",
     "next": "15.2.4",
     "next-auth": "^4.24.11",
