--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.0",
+    "@floating-ui/react-dom-interactions": "^0.13.3",
     "@prisma/client": "^6.7.0",
     "@tanstack/react-query": "^5.71.3",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "jotai": "^2.12.3",
     "mammoth": "^1.9.0",
     "next": "15.2.4",
