--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "mammoth": "^1.9.0",
     "next": "15.2.4",
     "next-auth": "^4.24.11",
-    "openai": "^4.91.1",
+    "next-themes": "^0.4.6",
+    "openai": "^4.103.0",
     "pdf-parse": "^1.1.1",
     "prisma": "^6.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-responsive": "^10.0.1"
   },
   "devDependencies": {
