fix: workflows 변경

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,15 +9,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repo
         uses: actions/checkout@v4
+
+      - name: Get GitHub Runner IP
+        id: ip
+        run: |
+          IP=$(curl -s https://checkip.amazonaws.com)
+          echo "RUNNER_IP=$IP" >> $GITHUB_ENV
+
+      - name: Authorize temp SSH access in Security Group
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Add temporary SSH rule
+        run: |
+          aws ec2 authorize-security-group-ingress \
+            --group-id ${{ secrets.SECURITY_GROUP_ID }} \
+            --protocol tcp --port 22 --cidr $RUNNER_IP/32
 
       - name: Setup SSH Key
         run: |
           echo "${{ secrets.EC2_SSH_KEY }}" | base64 -d > private_key.pem
           chmod 600 private_key.pem
 
-      - name: Connect to EC2 and Deploy
+      - name: SSH to EC2 and Deploy
         run: |
           ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
             cd ~/summarizer
@@ -25,3 +44,10 @@ jobs:
             docker compose down
             docker compose up -d --build
           EOF
+
+      - name: Remove temporary SSH rule
+        if: always()
+        run: |
+          aws ec2 revoke-security-group-ingress \
+            --group-id ${{ secrets.SECURITY_GROUP_ID }} \
+            --protocol tcp --port 22 --cidr $RUNNER_IP/32
